clusters/my-cluster/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - komplikter-sub3.servehttp.com
      secretName: tlss-prod-secret
  rules:
    - host: komplikter-sub3.servehttp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 443
